// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<div unsafeHTML=""> => <div unsafeHTML="<span>abc</span>"></div> 1`] = `
<div>
  <span>
    abc
  </span>
</div>
`;

exports[`<div unsafeHTML="<div>abc</div>"> => <div unsafeHTML="<span>abc</span>"></div> 1`] = `
<div>
  <span>
    abc
  </span>
</div>
`;

exports[`<div unsafeHTML="<div>abc</div>"> => <div></div> 1`] = `
<div>
  <div>
    abc
  </div>
</div>
`;

exports[`<div> => <div unsafeHTML="<span>abc</span>"></div> 1`] = `
<div>
  <span>
    abc
  </span>
</div>
`;
